# layercast

./: .dagrun  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  Cargo.toml  Containerfile.metadata-server  Containerfile.model-mesh  Containerfile.vllm-plugin  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yaml  images.yaml
crates/discovery/: Cargo.toml
crates/discovery/examples/: gen_crd.rs
crates/discovery/src/: crd.rs  inference_pool.rs  k8s.rs  lib.rs  mock.rs  peer_discovery.rs
crates/metadata-server/: Cargo.toml  build.rs
crates/metadata-server/src/: compile_cache.rs  config.rs  grpc_service.rs  hf_api.rs  leader.rs  lib.rs  main.rs  pod_watcher.rs  proto.rs  resp.rs  session.rs  state.rs  transfer_plan.rs
crates/model-mesh/: Cargo.toml  build.rs
crates/model-mesh/src/: compile_cache.rs  config.rs  hf_api.rs  ipc.rs  lib.rs  main.rs  nixl_vram_store.rs  proto.rs  resp.rs  transfer_plan.rs
deploy/: daemonset.yaml  istio-authz-policy.yaml  model-mesh-coreweave.yaml  model-proxy.yaml  rdma-test-job.yaml
deploy/benchmark/: hf-cold.yaml  kustomization.yaml  nfs-cached.yaml  nixl-p2p.yaml  nixl-scaling.yaml  populate-job.yaml  pvc.yaml
deploy/crds/: nodecache.yaml
deploy/external-crds/: inferencepool.yaml
deploy/metadata-server/: deployment.yaml  kustomization.yaml  rbac.yaml  service.yaml
deploy/nixl-e2e/: crd.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  services.yaml  vllm.yaml
docs/: nixl-perf-tuning.md
guides/: README.md
guides/weight-distribution/: README.md  layercast-values.yaml
proto/: layercast.proto
scripts/: benchmark.py  benchmark.sh  test-coreweave.sh  test-nixl-e2e.sh
vllm-plugin/: pyproject.toml
vllm-plugin/src/vllm_layercast/: __init__.py  backend.py  backend_rust.py  checksum.py  daemon_client.py  grpc_client.py  loader.py  log.py  nixl_agent.py  plugin.py  proto.py
vllm-plugin/src/vllm_layercast/pb/layercast/: __init__.py
vllm-plugin/tests/: test_backend.py  test_checksum.py  test_nixl_protocol.py
