[workspace]
resolver = "2"
members = [
    "crates/discovery",
    "crates/model-mesh",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
axum = "0.8"
bytes = "1"
rand = "0.8"
tempfile = "3"
async-trait = "0.1"
futures = "0.3"
kube = { version = "3", features = ["client", "runtime", "rustls-tls", "derive"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }
schemars = "1"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
