[package]
name = "metadata-server"
version = "0.3.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
discovery = { path = "../discovery" }
clap = { version = "4", features = ["derive", "env"] }
hf-hub = { version = "0.4", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
prost = "0.13"
tonic = "0.12"
kube = { workspace = true }
k8s-openapi = { workspace = true }
jiff = "0.2"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
async-trait = { workspace = true }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
