[package]
name = "model-mesh"
version = "0.1.2-rc1"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
discovery = { path = "../discovery" }
clap = { version = "4", features = ["derive", "env"] }
hf-hub = { version = "0.4", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = { workspace = true }
rmp-serde = "1"
serde_bytes = "0.11"
kube = { workspace = true }
k8s-openapi = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
async-trait = { workspace = true }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
